--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -9,7 +9,7 @@ development of mixed-signal \Glspl{ASIC}. It was developed at the
 Electronic Vision(s) Group of Heidelberg University.
 
 \ti{brick} is based on the \ti{Waf} build system. \ti{Waf} is best explained by
-citing the Waf book \cite{wafbook}:
+citing the Waf book \citep{nagy2015waf}:
 \begin{displayquote}
 	The Waf framework is somewhat different from traditional build systems in
 	the sense that it does not provide support for a specific language. Rather,
@@ -26,7 +26,7 @@ Encouraged by this description of \ti{Waf}, several extensions to it have been
 created. These extensions are described in \cref{chap:bricktools}.
 For a detailed introduction to \ti{Waf}, the interested reader is referred to
 the online version of the \ti{Waf} book
-\cite{wafbook}\footnote{\url{https://waf.io/book/}}. A short introduction to
+\citep{nagy2015waf}\footnote{\url{https://waf.io/book/}}. A short introduction to
 \ti{Waf} is given in \cref{chap:waf}.
 
 \Cref{chap:incisive} describes the simulation tools that come with Cadence
