--- a/doc/mybib.bib
+++ b/doc/mybib.bib
@@ -1,2 +1,24 @@
-@book{wafbook, author="Thomas Nagy", title="The Waf
-	book",url="https://waf.io/book/"}
+@book{nagy2015waf,
+	author={Thomas Nagy},
+	title="The Waf book",
+	url="https://waf.io/book/",
+	year=2015
+}
+
+@book{cds2014amssimug,
+	publisher={Cadence Design Systems},
+	title={Virtuoso AMS Designer Simulator User Guide, Product Version 14.1},
+	year=2014
+}
+
+@book{cds2014ncelab,
+	publisher={Cadence Design Systems},
+	title={Elaborating Your Design, Product Version 14.1},
+	year=2014
+}
+
+@book{cds2014compverilog,
+	publisher={Cadence Design Systems},
+	title={Compiling Verilog Source Files, Product Version 14.1},
+	year=2014
+}
