changed default VIEW_MAP in cadence_base.py

--- a/doc/incisive.tex
+++ b/doc/incisive.tex
@@ -64,7 +64,7 @@ chosen depending on the suffix of the design files. By default, the view name
 \ti{module} is chosen for all verilog files, however it can be modified with
 the \ti{VIEW\_MAP} option in the \ti{hdl.var} file.
 \begin{minted}{verilog}
-DEFINE VIEW_MAP (.vams => behav, \
+DEFINE VIEW_MAP (.vams => ams, \
                   +    => module)
 \end{minted}
 Here, the + operator represents any other extension. This particular
