--- a/doc/recipes.tex
+++ b/doc/recipes.tex
@@ -20,7 +20,6 @@ def configure(cfg):
     cfg.load('cadence_ius')
 
 def build(bld):
-    bld.load('brick_general')
     bld ( features = 'cds_write_libs' )
  
     bld (
@@ -142,7 +141,6 @@ def configure(conf):
     ])
 
 def build(bld):
-    bld.load('brick_general')
     bld ( features = 'cds_write_libs' )
 
     bld (
@@ -228,7 +226,6 @@ def configure(conf):
     ])
 
 def build(bld):
-    bld.load('brick_general')
     bld ( features = 'cds_write_libs' )
 
     bld (
@@ -325,7 +322,6 @@ The example code presented in this subsection can be found in the folder\\
 ...
 
 def build(bld):
-    bld.load('brick_general')
     bld ( features = 'cds_write_libs' )
 
     bld (
@@ -405,6 +401,8 @@ the \tf{ncvlog} calls.
 \subsection{Design Rule Check}
 If you already have a \ti{GDSII} file, you can use the following minimal
 \tf{wscript} to set up a \gls{DRC} with \ti{Calibre}.
+This example can be found in the folder\\
+\tf{test/calibre/drc\_inverter}.
 \begin{lstwscript}
 def configure(conf):
 
@@ -413,10 +411,13 @@ def configure(conf):
 def build(bld):
 
     bld (
+        name = 'calibre_drc_inverter',
         features = 'calibre_drc',
         cellname = 'inverter',
         layout_gds = bld.find_node('your.gds'),
-        includes = [bld.root.find_node('/path/to/your/rule-file')],
+        includes = [
+            bld.root.find_node(/your/process/rule/file))
+        ],
         unselect_checks = [
             #'M9.DN.2L',
         ]
@@ -424,10 +425,18 @@ def build(bld):
 
 \end{lstwscript}
 
+The \ti{task generator} called \tf{calibre\_drc\_inverter} sets up a rule file
+for you. It will add include statements for the files that you'd specify
+on line 11 and it will add \tf{DRC UNSELECT CHECK} statements for the checks that
+you'd specified in lines 12-14.
+
 \subsubsection{Generating the GDSII file on-the-fly}
 If you want to run a \gls{DRC} on a layout that resides in one of your Cadence
 libraries, you can let \ti{brick} generate a streamed-out \ti{GDSII} file for
 you on-the-fly.
+This example can be found in the folder
+\tf{test/calibre/drc\_inverter\_streamout}.
+
 \begin{lstwscript}
 def configure(conf):
 
@@ -440,12 +449,9 @@ def configure(conf):
     conf.load('calibre_drc')
 
 def build(bld):
-    bld.load('brick_general')
     bld ( features = 'cds_write_libs' )
 
-    #   
-    # Generate abstract for capacitive_memory
-    #   
+    # Additional task generator for streamout
     inverter_streamout = bld (
         name = 'streamout_inverter',
         features = 'cds_strmout',
@@ -456,7 +462,9 @@ def build(bld):
         features = 'calibre_drc',
         cellname = 'inverter',
         layout_gds = inverter_streamout.get_cadence_strmout_gds_node(),
-        includes = [bld.root.find_node('/path/to/your/rule-file')],
+        includes = [
+            bld.root.find_node(/your/process/rule/file))
+        ],
         unselect_checks = [
             #'M9.DN.2L',
         ]
@@ -464,6 +472,15 @@ def build(bld):
 \end{lstwscript}
 
 \subsection{Layout Versus Schematic}
+The following code example demonstrates how to perform an \gls{LVS} check on a
+layout and schematic that resides in one of your Cadence design libraries.
+If you intend to perform the check on existing files (GDSII and spice netlist)
+you can do so by changing lines 36 and 37 and by removing the netlisting and
+streamout task generators.
+
+The following example can be found in the folder
+\tf{test/calibre/lvs\_inverter}.
+
 \begin{lstwscript}
 import os
 
@@ -479,13 +496,9 @@ def configure(conf):
     conf.load('calibre_lvs')
 
 def build(bld):
-    bld.load('brick_general')
 
     bld ( features = 'cds_write_libs' )
 
-    #   
-    # Generate abstract for capacitive_memory
-    #   
     inverter_streamout = bld (
         name = 'streamout_inverter',
         features = 'cds_strmout',
@@ -496,11 +509,9 @@ def build(bld):
         name = 'cds_netlist_lvs_inverter',
         features = 'cds_netlist_lvs',
         cellview = 'brick_test.inverter:schematic',
-        include = os.environ['BRICK_DIR']+'/source/spice/tsmc_special_cells.net'
+        include = '/some/netlist/you/want/to/include'
     )
 
-
-    print bld.root.find_node(os.environ['BRICK_DIR']+'/source/calibre/pex.rules')
 
     bld (
         features = 'calibre_lvs',
@@ -508,8 +519,142 @@ def build(bld):
         source_cellname = 'inverter',
         layout_gds = inverter_streamout.get_cadence_strmout_gds_node(),
         source_netlist = inverter_netlist.get_cds_netlist_lvs_node(),
-        includes = [bld.root.find_node(os.environ['BRICK_DIR']+'/source/calibre/pex.rules')],
+        includes = [
+            bld.root.find_node(/your/process/rule/file))
+        ],
     )
 
 \end{lstwscript}
 
+Please note that you can use the \ti{include} attribute of the
+\tf{cds\_netlist\_lvs} \ti{task generator} to include a netlist into the result
+netlist that is generated from the schematic. 
+
+\subsection{Parasitics Extraction}
+
+This example demonstrates how to perform a parasitics extraction on a layout
+that resides in one of your Cadence design libraries. It can be found in\\
+\tf{test/calibre/pex\_inverter}.
+
+\begin{lstwscript}
+def configure(conf):
+
+    conf.load('calibre_pex')
+
+def build(bld):
+
+    pex = bld (
+        name = 'xrc_inverter',
+        features = 'calibre_pex',
+        cellname = 'inverter',
+        layout_gds = bld.path.find_node('your_gdsii_file'),
+        includes = [
+            bld.root.find_node(/your/process/rule/file))
+        ],
+        extract_include_recursive = True,
+        only_extract_nets = [
+            # Some net names
+        ],
+        # Some additional statements you want to put into the rule file
+        mixins = [
+            'LAYOUT RENAME TEXT "/</\\[/g" "/>/\\]/g"',
+            'SOURCE RENAME TEXT "/</\\[/g" "/>/\\]/g"',
+        ],
+    )
+\end{lstwscript}
+
+Note that lines 15-23 are optional and can be used to extract only those nets
+that you specify and add several Calibre rule-file statements to the rule file
+that is generated by \ti{brICk}.
+If you specify nets in the \tf{only\_extract\_nets} attribute, these net names
+relate to the layout database. Usually, you would want to specify these nets
+names as they appear in the schematic. For the tool to be able to match these
+source net names to the layout, an LVS has to have been performed. The next
+example shows how to combine the two.
+
+\subsubsection{Using source netlist names}
+The following example shows how to perform an \gls{LVS} check before running a
+parasitics extraction. This allows you to use source (i.e. schematic) net names
+in the \tf{only\_extract\_nets} attribute.
+A running example of this can be found in
+\tf{test/calibre/pex\_inverter\_sourcenames\_streamout}.
+
+\begin{lstwscript}
+def build(bld):
+    ...
+
+    # perform an LVS first
+    bld (
+        features = 'calibre_lvs',
+        layout_cellname = 'inverter',
+        source_cellname = 'inverter',
+        layout_gds = inverter_streamout.get_cadence_strmout_gds_node(),
+        source_netlist = inverter_netlist.get_cds_netlist_lvs_node(),
+        includes = [
+            bld.root.find_node(/your/process/rule/file))
+        ],
+    )
+
+    pex = bld (
+        name = 'xrc_inverter',
+        features = 'calibre_pex',
+        cellname = 'inverter',
+        layout_gds = inverter_streamout.get_cadence_strmout_gds_node(),
+        source_netlist = inverter_netlist.get_cds_netlist_lvs_node(),
+        includes = [
+            bld.root.find_node(/your/process/rule/file))
+        ],
+        extract_include_recursive = True,
+        only_extract_nets = [
+            # schematic net names
+        ],
+        mixins = [
+            'LAYOUT RENAME TEXT "/</\\[/g" "/>/\\]/g"',
+            'SOURCE RENAME TEXT "/</\\[/g" "/>/\\]/g"',
+        ],
+    )
+\end{lstwscript}
+\subsubsection{Using xcells}
+If you want to use xcells to reduce the complexity of the extracted netlist,
+you can do so by specifying them via the \tf{hcells} and \tf{xcells} attributes
+of the \ti{task generators}.
+A running example of this can be found in\\
+\tf{test/calibre/pex\_inverter\_sourcenames\_streamout}.
+
+\begin{lstwscript}
+def build(bld):
+    ...
+
+    # perform an LVS first
+    bld (
+        features = 'calibre_lvs',
+        layout_cellname = 'inverter',
+        source_cellname = 'inverter',
+        layout_gds = inverter_streamout.get_cadence_strmout_gds_node(),
+        source_netlist = inverter_netlist.get_cds_netlist_lvs_node(),
+        includes = [
+            bld.root.find_node(/your/process/rule/file))
+        ],
+        hcells = [
+            #        'synapse synapse',
+
+        ]
+    )
+
+    pex = bld (
+        name = 'xrc_inverter',
+        features = 'calibre_pex',
+        cellname = 'inverter',
+        layout_gds = inverter_streamout.get_cadence_strmout_gds_node(),
+        source_netlist = inverter_netlist.get_cds_netlist_lvs_node(),
+        includes = [
+            bld.root.find_node(/your/process/rule/file))
+        ],
+        xcells = [
+            #        'synapse synapse',
+        ],
+    )
+\end{lstwscript}
+
+This example assumes that there is a circuit called synapse that you want to
+extract hierarchically.
