--- a/doc/glossary.tex
+++ b/doc/glossary.tex
@@ -5,3 +5,6 @@
 \newacronym{DRC}{DRC}{Design Rule Check}
 \newacronym{PEX}{PEX}{Parasitics Extraction}
 \newacronym{RVM}{RVM}{Real-Valued Modelling}
+\newacronym{PDB}{PDB}{Parasitic Database}
+\newacronym{PHDB}{PHDB}{Persistant Hierarchical Database}
+\newacronym{SVRF}{SVRF}{Standard Verification Rule Format}
