--- a/doc/mybib.bib
+++ b/doc/mybib.bib
@@ -22,3 +22,10 @@
 	title={Compiling Verilog Source Files, Product Version 14.1},
 	year=2014
 }
+
+@book{calibre2014xrc,
+	publisher={Mentor Graphics Corporation},
+	title={Calibre xRC TM User's Manual},
+	year=2014
+}
+
