--- a/doc/glossary.tex
+++ b/doc/glossary.tex
@@ -8,3 +8,12 @@
 \newacronym{PDB}{PDB}{Parasitic Database}
 \newacronym{PHDB}{PHDB}{Persistant Hierarchical Database}
 \newacronym{SVRF}{SVRF}{Standard Verification Rule Format}
+\newglossaryentry{spice}
+{
+    name=Spice,
+	description={SPICE is a general-purpose circuit simulation program for
+	nonlinear dc, nonlinear transient, and linear ac analyses. The term is
+	conventionelly used for the circuit description format that was introduced
+	with this simulator. See also
+		\url{http://bwrcs.eecs.berkeley.edu/Classes/IcBook/SPICE/UserGuide/description_fr.html}}
+}
