--- a/doc/mybib.bib
+++ b/doc/mybib.bib
@@ -29,3 +29,14 @@
 	year=2014
 }
 
+@book{calibre2014ver,
+	publisher={Mentor Graphics Corporation},
+	title={Calibre Verification User's Manual},
+	year=2014
+}
+
+@book{calibre2014svrf,
+	publisher={Mentor Graphics Corporation},
+	title={Standard Verification Rule Format (SVRF) Manual},
+	year=2014
+}
